Safari overlap fix

--- a/_resources/wikivisor/skins/chameleon/wikicraft.scss
+++ b/_resources/wikivisor/skins/chameleon/wikicraft.scss
@@ -22,6 +22,7 @@ html {
 	@extend .position-fixed;
 	@extend .w-100;
 	bottom: 0;
+	height: calc(100vh - calc(100vh - 100%));
 }
 body {
 	background-image: none;
@@ -46,6 +47,7 @@ a {
 	height: 100vh;
 	max-width: 1280px;
 	@extend .m-auto;
+	height: -webkit-fill-available;
 }
 #sidebar-area {
 	order: 1;
